using UnityEngine;

public static class PlayerAnimID
{
    public static readonly int Die = Animator.StringToHash("Die");
    public static readonly int Reload = Animator.StringToHash("Reload");
    public static readonly int Move = Animator.StringToHash("Move");
    public static readonly int Attack = Animator.StringToHash("Attack");
    public static readonly int AllAttack = Animator.StringToHash("AllAttack");
}
